--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,10 @@
     <string name="app_name">AlumniConnectionApp</string>
     <string name="hello_world">Hello world!</string>
     <string name="menu_settings">Settings</string>
+    <string name="animation_string1">Welcome to Alumni Connection!!</string>
+    <string name="animation_string2">Try the full website!!</string>
+    <string name="email_prompt">Email</string>
+    <string name="password_prompt">Password</string>
+    <string name="sign_in_button">Sign In </string>
 
 </resources>
