--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="email_prompt">Email</string>
     <string name="password_prompt">Password</string>
     <string name="sign_in_button">Sign In </string>
+    <string name="title_activity_home_page">HomePage</string>
 
 </resources>
